--- a/css/main.css
+++ b/css/main.css
@@ -5236,12 +5236,18 @@ Created using IcoMoon - icomoon.io
 .cc-contact-information {
   width: 100%;
   position: relative;
-  overflow: hidden; }
+  overflow: hidden; 
+  background-size: cover;
+  background-position: center center;}
   .cc-contact-information .cc-contact {
     padding: 8% 0 8% 20%; }
     @media (max-width: 767px) {
       .cc-contact-information .cc-contact {
         padding: 30px 0px 30px 0px; } }
+
+background-size: cover;
+    background-position: center center;
+
 
 /* Footer */
 /* Social button style */
